# morphOS

./: .dockerignore  .gitignore  BOOT.md  Dockerfile  README.md  calculator_spec.md  launch-stack.sh  pyproject.toml  questions.db  skyforce.code-workspace  skyforce_gap_analysis.md  test_output.json  test_report.md
.omx/: metrics.json
.openclaw/: openclaw.json  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.2  openclaw.json.bak.3  openclaw.json.bak.4  update-check.json  workspace-state.json
.sisyphus/: pi-phase4-work-order.json
.skyforce-context/: annotations.json
docs/: ADR_LADDER_AGENT_ROOM_V1.md  AGENT_ARCHETYPES_SPEC.md  APPROVAL_PACKET_SCHEMA_SPEC.md  CODE_INTELLIGENCE_RETRIEVAL_SPEC.md  CONTEXT_HUB_INTEGRATION_PLAN.md  CONTEXT_HUB_RUNTIME_INTEGRATION_SPEC.md  DIGITAL_TWIN_UNIVERSE_ROLLOUT_SPEC.md  DIGITAL_TWIN_VALIDATION_SPEC.md  DRIFT_RESPONSE_PLAYBOOK_SPEC.md  DURABLE_EXECUTION_HANDOFF_CONTRACTS.md  EVAL_DRIVEN_ACCEPTANCE_SPEC.md  FILESYSTEM_MEMORY_TOPOLOGY_SPEC.md  GENE_TRANSFUSION_FROM_ACE_PLATFORM.md  GITHUB_2_0_FROM_STARRED_REPOS.md  GIT_NATIVE_WORK_LEDGER_SPEC.md  HERMES_MIGRATION_NOTES.md  HUMAN_GUIDE.md  LADDER_AGENT_ROOM_DOCSET.md  LADDER_AGENT_ROOM_FAQ.md  LADDER_AGENT_ROOM_IMPLEMENTATION_BRIEF.md  LADDER_AGENT_ROOM_INTEGRATION.md  LADDER_AGENT_ROOM_REVIEW_CHECKLIST.md  LADDER_AGENT_ROOM_ROLLOUT_BACKLOG.md  MEMORY_GOVERNANCE_AND_RETENTION_SPEC.md  MORPHOS_GAP_ANALYSIS_FROM_GITHUB_STARS.md  MORPHOS_REPO_FULL_REVIEW_2026-04-02.md  MORPHOS_V0_AGENT_DISPATCH_PACKETS.md  MORPHOS_V0_CORE_STACK.md  MORPHOS_V0_IMPLEMENTATION_BOARD.md  (+74 more)
(+25081 files in other folders)
