[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-compiler"
version = "0.1.0"
description = "Cognitive IR compiler for memory retrieval and injection."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["memory_compiler*"]
